Fix[SMW-186][SMW-181]: fix scrollbar padding and disabled button

--- a/src/app/backoffice/pages/Settings/GeneralSettings/AnnouncementsSettings/style.scss
+++ b/src/app/backoffice/pages/Settings/GeneralSettings/AnnouncementsSettings/style.scss
@@ -5,8 +5,9 @@
       border-color: transparent;
     }
     &:disabled {
+      color: white;
+      background-color: #c4c8cd;
       &:hover {
-        color: rgba(0, 0, 0, 0.25);
         border-color: #d9d9d9;
       }
     }
